# IntroComputerGraphics

./: CMakeLists.txt
cmake/: deps_files.cmake  engine_files.cmake  projects.cmake
include/engine/: camera.hpp  input.hpp  shader.hpp  texture.hpp  window.hpp
include/engine/geometry/: cube.hpp  geometry.hpp  quad.hpp  sphere.hpp  teapot.hpp
include/glad/: glad.h
projects/01_Window/: main.cpp
projects/02_Tri/: main.cpp
projects/03_Shaders/: main.cpp  tri.frag  tri.vert
projects/04_Texture/: main.cpp  tri.frag  tri.vert
projects/05_3D/: 3d.vert  main.cpp
projects/06_Camera/: 3d.frag  main.cpp
projects/07_Camera_Class/: main.cpp
projects/08_Phong/: main.cpp  phong.frag  phong.vert
projects/09_Lightmaps/: main.cpp  phong.frag
projects/10_LightEmitter_Directional/: main.cpp  phong.frag
projects/11_LightEmitter_Point/: main.cpp  phong.frag  phong.vert
projects/12_LightEmitter_Spot/: main.cpp  phong.frag
projects/13_LightEmitter_All/: main.cpp  phong.frag
projects/14_LoadModels/: fragment.frag  main.cpp  vertex.vert
projects/15_Stencil/: main.cpp  stencil.frag
projects/16_Blending/: blend.frag  blend.vert  main.cpp
projects/17_NormalMapping/: main.cpp  normal.frag  normal.vert  phong.frag
projects/18_FBO/: fbo.frag  fbo.vert  main.cpp  phong.frag
projects/19_ShadowMaps/: debug.frag  depth.vert  light.frag  light.vert  main.cpp  phong.frag  phong.vert
projects/Act01_PhongInView/: light.frag  light.vert  main.cpp  phong.frag  phong.vert
projects/Act02_CustomLookAt/: main.cpp
projects/Act03_Flashlight/: main.cpp  phong.frag
projects/Act04_LoadModel/: main.cpp  normal.vert
src/engine/: camera.cpp  shader.cpp  texture.cpp  window.cpp
src/engine/geometry/: cube.cpp  geometry.cpp  quad.cpp  teapot.cpp
